# gltf-validator

./: Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml  check-macos.yml  make-release.yml
src/: lib.rs  main.rs
tests/: cube.glb
