[package]
name = "gltf-validator"
description = "A rust wrapper around the Khronos group gltf-validator tool."
repository = "https://github.com/kittycad/gltf-validator"
version = "0.2.3"
edition = "2021"
license = "MIT"

[[bin]]
name = "gltf-validator"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["cargo", "derive", "env", "unicode", "help", "wrap_help"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.104"
serde_repr = "0.1.16"
tempfile = "3.8.0"

[build-dependencies]
anyhow = "1"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4.39"
tempfile = "3.8.0"
xz = "0.1.0"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
